Changed background image. Finished blur effect. Fixed opacity. TODO:   1. fix dropdown spacing   2. fix font family

--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body {
   color: white;
 }
 .background-image {
-  background-image: url("bkg.jpg");
+  background-image: url("pure_background.png");
   background-size: cover;
   position: fixed;
   margin: 0;
@@ -20,7 +20,7 @@ body {
   z-index: 1;
   display: block;
   filter: none;
-  transition: 1s;
+  transition: 0.7s;
 }
 .main-content {
   margin: 0;
@@ -28,13 +28,8 @@ body {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
   position: relative;
-  z-index: 100;
-}
-.overlay::before {
-  content: "";
-  filter: none;
+  z-index: 2;
 }
 .wb {  
   color: #000;
@@ -68,10 +63,11 @@ li a {
   padding-bottom: 2px;
   margin: 0px 4px;
   margin-bottom: 5px;
-  border-bottom: 2px solid #fff;
+  border-bottom: 1pt solid #fff;
 }
 li a:hover {
   font-weight: bold;
+  border-bottom: 5pt solid #fff;
 }
 li .dropdown {
   display: inline-block;
@@ -85,8 +81,8 @@ li .dropdown {
   background-color: white;
 }
 .dropdown-content a {
-  color: #000;
-  padding: 12px 16px;
+  color: #3288B7;
+  padding: 10px 16px;
   text-decoration: none;
   display: block;
   text-align: center;
@@ -99,19 +95,21 @@ li .dropdown {
 }
 .wb {  
   background-color: #fff;
-  color: #000;
-  mix-blend-mode: screen;
-  padding: 7px 12px;
+  color: #3288B7;
+  padding: 7px 20px;
   border-radius: 10px;
   text-transform: uppercase;
   text-decoration: none;
+  font-family: swisot2regular, sans-serif;
 }
 .wb:hover {
   opacity: 0.7;
 }
 .topic {
+  font-family: 'Noto Sans TC', sans-serif;
   font-weight: bold;
   font-size: 45px;
+  letter-spacing: 5px;
   margin-bottom: 155px;
 }
 #navbar {
@@ -127,7 +125,13 @@ li .dropdown {
   font-size: 45px;
   font-weight: bold;
   margin-top: 135px;
-  margin-bottom: 155px;
+  margin-bottom: 120px;
   position: relative;
+}
+#p01 {
+  font-size: 18px;
+  font-family: 'Noto Sans TC', sans-serif;
+  margin-top: 15px;
+  letter-spacing: 5px;
 }
 
